--- a/Todo list V1 (Kirills Erdmanis).html
+++ b/Todo list V1 (Kirills Erdmanis).html
@@ -1,4 +1,3 @@
-<!-- V2 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,10 +11,12 @@
   <div class="card shadow">
     <div class="card-body">
       <h3 class="text-center mb-4">Darbs</h3>
+
       <div class="input-group mb-3">
         <input type="text" id="task-input" class="form-control" placeholder="Ievadi uzdevumu">
         <button class="btn btn-primary" onclick="addTask()">Pievienot</button>
       </div>
+
       <ul id="task-list" class="list-group"></ul>
     </div>
   </div>
@@ -44,13 +45,79 @@ function addTask() {
   checkbox.addEventListener("change", () => {
     label.classList.toggle("text-decoration-line-through");
     label.classList.toggle("text-muted");
+    saveData();
   });
 
-  li.querySelector("button").onclick = () => li.remove();
+  li.querySelector("button").onclick = () => {
+    li.remove();
+    saveData();
+  };
 
   document.getElementById("task-list").appendChild(li);
   input.value = "";
+  saveData();
 }
+
+function saveData() {
+  const tasks = [];
+  const listItems = document.querySelectorAll("#task-list li");
+
+  listItems.forEach(li => {
+    const text = li.querySelector("label").innerText;
+    const completed = li.querySelector("input").checked;
+
+    tasks.push({
+      text: text,
+      completed: completed
+    });
+  });
+
+  localStorage.setItem("tasks", JSON.stringify(tasks));
+}
+
+function loadData() {
+  const data = localStorage.getItem("tasks");
+  if (!data) return;
+
+  const tasks = JSON.parse(data);
+
+  tasks.forEach(task => {
+    const li = document.createElement("li");
+    li.className = "list-group-item d-flex align-items-center justify-content-between";
+
+    li.innerHTML = `
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox">
+        <label class="form-check-label ms-2">${task.text}</label>
+      </div>
+      <button class="btn btn-danger btn-sm">Dzēst</button>
+    `;
+
+    const checkbox = li.querySelector("input");
+    const label = li.querySelector("label");
+
+    checkbox.checked = task.completed;
+
+    if (task.completed) {
+      label.classList.add("text-decoration-line-through", "text-muted");
+    }
+
+    checkbox.addEventListener("change", () => {
+      label.classList.toggle("text-decoration-line-through");
+      label.classList.toggle("text-muted");
+      saveData();
+    });
+
+    li.querySelector("button").onclick = () => {
+      li.remove();
+      saveData();
+    };
+
+    document.getElementById("task-list").appendChild(li);
+  });
+}
+
+loadData();
 </script>
 
 </body>
